--- a/hw1/01-hello.html
+++ b/hw1/01-hello.html
@@ -15,29 +15,32 @@
       <section>
         <img
           class="img"
-          src="../images/caterina.png"
+          src="images/gr7@pdx.edu-75ca18f2.jpg"
+          alt="Picture of Gamaliel Rojas"
           width="200"
-          height="200" />
+          height="200"
+        />
         <p class="bio">
-          My name is Caterina and I will be teaching CS 463/563: Intro to Web
-          Development this quarter. Let's get started with the first homework
-          assignment. The first thing we'll do is figure out how to run code
-          checks for accessibility, formatting, and valid HTML and CSS code.
+          My name is Gamaliel Rojas and I will be attending CS 463/563: Intro to
+          Web Development this quarter. I am getting started with the first
+          homework assignment. The first thing I will l do is figure out how to
+          run code checks for accessibility, formatting, and valid HTML and CSS
+          code.
         </p>
       </section>
       <hr />
       <section>
-        <REPLACE_ME class="sub-title">About PSU</REPLACE_ME>
-        <REPLACE_ME class="greeting-message">
+        <h1 class="sub-title">About PSU</h1>
+        <span class="greeting-message">
           Welcome to
-          <REPLACE_ME class="greeting-italic"
-            >The School of Engineering at
-          </REPLACE_ME>
-          <REPLACE_ME class="greeting-emphasis"
-            >Portland State University</REPLACE_ME
-          >
-        </REPLACE_ME>
-        <img class="img" src="../images/psu-eb.jpg" alt="..." />
+          <span class="greeting-italic">The School of Engineering at </span>
+          <span class="greeting-emphasis">Portland State University</span>
+        </span>
+        <img
+          class="img"
+          src="../images/psu-eb.jpg"
+          alt="Engineering building at PSU at night"
+        />
         <p class="general-text engineering-building-description">
           The Engineering Building is a concrete and glass, five-story building
           located on SW 4th Avenue just south of the Fourth Avenue Building and
@@ -48,18 +51,18 @@
         </p>
       </section>
       <section>
-        <REPLACE_ME class="sub-title">New Student Orientation</REPLACE_ME>
-        <REPLACE_ME class="general-text">
+        <span class="sub-title">New Student Orientation</span>
+        <p class="general-text">
           New Student Orientation is an essential part of your undergraduate
           college experience, provides a foundation for success, and is
-          <REPLACE_ME class="boldfaced-text">
+          <span class="boldfaced-text">
             required for all incoming undergraduate students.
-          </REPLACE_ME>
+          </span>
           New Student Orientation will provide you with details about campus
           life, student services, degree requirements, and, upon completion,
           will provide you with course registration access for your first term.
-        </REPLACE_ME>
-        <REPLACE_ME class="general-text">
+        </p>
+        <p class="general-text">
           View
           <a
             href="https://www.pdx.edu/admissions/deadlines#enrollment-confirmation"
@@ -67,104 +70,116 @@
           >
           and other
           <a href="https://www.pdx.edu/admissions/deadlines">Important Dates</a>
-        </REPLACE_ME>
+        </p>
       </section>
-      <REPLACE_ME class="sub-title">Application Information</REPLACE_ME>
-      <REPLACE_ME class="general-grouped-info">
-        <REPLACE_ME class="sub-sub-title"
-          >Submit Your Application and $60 Application Fee</REPLACE_ME
-        >
-        <REPLACE_ME class="general-text">
+      <h2 class="sub-title">Application Information</h2>
+      <section class="general-grouped-info">
+        <h3 class="sub-sub-title">
+          Submit your application and $60 Application Fee
+        </h3>
+        <p class="general-text">
           Go to Portland State University's online application system and select
           Create Account. If you have already started an application, or created
           one for a past term, select Log In.
-        </REPLACE_ME>
-        <REPLACE_ME class="general-text">
+        </p>
+        <p class="general-text">
           Undergraduate applicants may be eligible for a waiver of their $60
           admission application fee. Based on the information you provide in
           your application, we will determine if you are eligible for a fee
           waiver.
-        </REPLACE_ME>
-      </REPLACE_ME>
-      <REPLACE_ME class="general-grouped-info">
-        <REPLACE_ME class="sub-sub-title"
-          >Submit Transcripts from All Schools Attended</REPLACE_ME
-        >
-        <REPLACE_ME class="general-text">
+        </p>
+      </section>
+      <section class="general-grouped-info">
+        <h3 class="sub-sub-title">
+          Submit Transcripts from All Schools Attended
+        </h3>
+        <p class="general-text">
           You are required to submit individual transcripts from each college or
           university where you registered for any coursework. Failure to submit
           individual transcripts from each college or university attended may
           result in a delayed admission decision. Official transcripts are
           required from all the schools you've attended, see our official
           records policy for details.
-        </REPLACE_ME>
-        <REPLACE_ME class="general-text">
+        </p>
+        <p class="general-text">
           Failure to disclose all colleges is a violation of Portland State
           University's student code of conduct.
-        </REPLACE_ME>
-      </REPLACE_ME>
-      <REPLACE_ME class="general-grouped-info">
-        <REPLACE_ME class="sub-sub-title"
-          >Submit the Free Application for Federal Student Aid
-          (FAFSA)</REPLACE_ME
-        >
-        <REPLACE_ME class="general-text">
+        </p>
+      </section>
+      <section class="general-grouped-info">
+        <h3 class="sub-sub-title">
+          Submit the Free Application for Federal Student Aid (FAFSA)
+        </h3>
+        <p class="general-text">
           Submission of the FAFSA is not required to receive an admission
           decision. We encourage students to submit the FAFSA as soon as
           possible after October 1.
-        </REPLACE_ME>
-      </REPLACE_ME>
-      <REPLACE_ME class="general-grouped-info">
-        <REPLACE_ME class="sub-sub-title"
-          >Check Your Application Status</REPLACE_ME
-        >
-        <REPLACE_ME class="general-text">
+        </p>
+      </section>
+      <section class="general-grouped-info">
+        <h3 class="sub-sub-title">Check Your Application Status</h3>
+        <p class="general-text">
           If you have submitted an application to Portland State University, you
           can log in to PSU's application portal to review the status of your
           application. You will be notified via email for each document you
           submit and your admission decision.
-        </REPLACE_ME>
-      </REPLACE_ME>
-      <section>
-        <REPLACE_ME class="sub-title">Submit your Information</REPLACE_ME>
-        <form>
-          <div>Name</div>
-          <input type="text" />
-          <div>Email</div>
-          <input type="text" />
-          <div>Region</div>
-          <input type="text" />
-          <div>
-            For best performance, enter a region closest to your application
-          </div>
-          <div class="radio-buttons">
-            <div>Plan type</div>
-            <input type="radio" />
-            <label for="basic">Basic</label>
-            <input type="radio" />
-            <label for="business">Business</label>
-            <input type="radio" />
-            <label for="pro">Pro</label>
-          </div>
-          <div class="checkboxes">
-            <div>Included Fields</div>
-            <input type="checkbox" />
-            <label>Name</label>
-            <input type="checkbox" />
-            <label>Role</label>
-            <input type="checkbox" />
-            <label>Email</label>
-            <input type="checkbox" />
-            <label>Company Name</label>
-            <input type="checkbox" />
-            <label>Description</label>
-            <input type="checkbox" />
-            <label>Type</label>
-          </div>
-          <button>Create</button>
-          <button>Reset</button>
-        </form>
+        </p>
       </section>
+      <br />
+      <h2 class="sub-title">Submit your Information</h2>
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" />
+      <br />
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" />
+      <br />
+      <label for="region">Region</label>
+      <input type="text" id="region" name="region" />
+      <br />
+      <div>
+        For best performance, enter a region closest to your application
+      </div>
+      <fieldset class="radio-buttons">
+        <legend>Plan type</legend>
+        <input type="radio" id="basic" name="plan" value="basic" />
+        <label for="basic">Basic</label>
+        <input type="radio" id="business" name="plan" value="business" />
+        <label for="business">Business</label>
+        <input type="radio" id="pro" name="plan" value="pro" />
+        <label for="pro">Pro</label>
+      </fieldset>
+      <fieldset class="checkboxes">
+        <legend>Included Fields</legend>
+        <input type="checkbox" id="include_name" name="included" value="name" />
+        <label for="include_name">Name</label>
+        <input type="checkbox" id="include_role" name="included" value="role" />
+        <label for="include_role">Role</label>
+        <input
+          type="checkbox"
+          id="include_email"
+          name="included"
+          value="email"
+        />
+        <label for="include_email">Email</label>
+        <input
+          type="checkbox"
+          id="include_company"
+          name="included"
+          value="company"
+        />
+        <label for="include_company">Company Name</label>
+        <input
+          type="checkbox"
+          id="include_description"
+          name="included"
+          value="description"
+        />
+        <label for="include_description">Description</label>
+        <input type="checkbox" id="include_type" name="included" value="type" />
+        <label for="include_type">Type</label>
+      </fieldset>
+      <button type="submit">Create</button>
+      <button type="reset">Reset</button>
     </main>
   </body>
 </html>
