--- a/hw3/01-starships.html
+++ b/hw3/01-starships.html
@@ -6,12 +6,47 @@
     <title>03 - Starships</title>
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <!-- todo: include bootstrap.css file -->
     <script defer src="01-starships.js"></script>
     <!-- todo: include bootstrap.js file -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Welcome</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Starships</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Form</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main>
       <h1>HW 3</h1>
       <section id="welcome">
@@ -20,8 +55,198 @@
       <section id="starships">
         <h2>Starships</h2>
       </section>
-      <section id="form">
-        <h2>Form</h2>
+      <!--
+      <section id="form" class="container my-5">
+        <h2 id="form-text" class= "text-center my-4">Sign Up Form</h2>
+        <form id = "form">
+          <div class="row mb-3">
+            <label for="inputName3" class="col-sm-2 col-form-label">
+              Name
+            </label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputName3" />
+            </div>
+          </div>
+          <div class="row mb-3">
+            <label for="inputUser3" class="col-sm-2 col-form-label">
+              Username
+            </label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputUser3" />
+            </div>
+          </div>
+          <div class="row mb-3">
+            <label for="inputEmail3" class="col-sm-2 col-form-label"
+              >Email</label
+            >
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="inputEmail3" />
+            </div>
+          </div>
+          <div class="row mb-3">
+            <label for="inputPassword3" class="col-sm-2 col-form-label"
+              >Password</label
+            >
+            <div class="col-sm-10">
+              <input type="password" class="form-control" id="inputPassword3" />
+            </div>
+          </div>
+          <div class="row mb-3">
+            <label for="inputDate3" class="col-sm-2 col-form-label">
+              Date
+            </label>
+            <div class="col-sm-10">
+              <input type="date" class="form-control" id="inputDate3" />
+            </div>
+          </div>
+          <fieldset class="row mb-3">
+            <legend class="col-form-label col-sm-2 pt-0">
+              Preferred Pronouns
+            </legend>
+            <div class="col-sm-10">
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="gridRadios"
+                  id="gridRadios1"
+                  value="option1"
+                  checked
+                />
+                <label class="form-check-label" for="gridRadios1">
+                  First radio
+                </label>
+              </div>
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="gridRadios"
+                  id="gridRadios2"
+                  value="option2"
+                />
+                <label class="form-check-label" for="gridRadios2">
+                  Second radio
+                </label>
+              </div>
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="gridRadios"
+                  id="gridRadios3"
+                  value="option3"
+                />
+                <label class="form-check-label" for="gridRadios3">
+                  THird radio
+                </label>
+              </div>
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="gridRadios"
+                  id="gridRadios4"
+                  value="option4"
+                />
+                <label class="form-check-label" for="gridRadios4">
+                  Sth radio
+                </label>
+              </div>
+          </div>
+          <button type="submit" class="btn btn-primary">Sign in</button>
+         <button type="reset" class="btn btn-primary">Reset</button>
+        </form>
+      </section>
+      -->
+      <section id="form" class="container my-5">
+        <div class="card p-4" style="max-width: 600px; margin: 0 auto">
+          <h3 class="text-center">Sign Up Form</h3>
+          <p class="text-center">Fill out the items in the form below</p>
+          <form id="signupForm">
+            <div class="mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" id="name" class="form-control" required />
+            </div>
+            <div class="mb-3">
+              <label for="username" class="form-label">Username</label>
+              <input type="text" id="username" class="form-control" required />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" id="email" class="form-control" required />
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password</label>
+              <input
+                type="password"
+                id="password"
+                class="form-control"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="date" class="form-label">Date</label>
+              <input type="date" id="date" class="form-control" required />
+            </div>
+            <div class="mb-3">
+              <fieldset class="border rounded p-3">
+                <legend class="form-label d-block">Preferred Pronouns</legend>
+                <div class="form-check">
+                  <input
+                    type="radio"
+                    id="she"
+                    name="pronouns"
+                    value="She/her"
+                    class="form-check-input"
+                    checked
+                  />
+                  <label for="she" class="form-check-label">She/her</label>
+                </div>
+                <div class="form-check">
+                  <input
+                    type="radio"
+                    id="he"
+                    name="pronouns"
+                    value="He/him"
+                    class="form-check-input"
+                  />
+                  <label for="he" class="form-check-label">He/him</label>
+                </div>
+                <div class="form-check">
+                  <input
+                    type="radio"
+                    id="they"
+                    name="pronouns"
+                    value="They/them"
+                    class="form-check-input"
+                  />
+                  <label for="they" class="form-check-label">They/them</label>
+                </div>
+                <div class="form-check">
+                  <input
+                    type="radio"
+                    id="none"
+                    name="pronouns"
+                    value="Prefer not to say"
+                    class="form-check-input"
+                  />
+                  <label for="none" class="form-check-label"
+                    >I prefer not to say</label
+                  >
+                </div>
+              </fieldset>
+            </div>
+            <div class="d-flex gap-2">
+              <button type="submit" class="btn btn-primary w-100">
+                Submit
+              </button>
+              <button type="reset" class="btn btn-secondary w-100">
+                Reset
+              </button>
+            </div>
+          </form>
+        </div>
       </section>
     </main>
   </body>
